// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button base demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       填充按钮 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       描边按钮 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-dashed t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       虚框按钮 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-text t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       文字按钮 
      
    </span>
  </button>
</div>
`;

exports[`Button block demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
  style="justify-content: center;"
>
  <div
    class="tdesign-demo-block-column"
    style="min-width: 320px; max-width: 640px;"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary t-size-full-width"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         填充按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default t-size-full-width"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         描边按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-dashed t-button--theme-default t-size-full-width"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         虚框按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-default t-size-full-width"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         文字按钮 
        
      </span>
    </button>
  </div>
</div>
`;

exports[`Button icon demo works fine 1`] = `
<div
  class="demo-button-icon"
>
  <div
    class="demo-button-row"
  >
    <div
      class="demo-button-col"
    >
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary"
        type="button"
      >
        
        
        <svg
          class="t-icon t-icon-add"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
        
        <span
          class="t-button__text"
        >
          
           新建 
          
        </span>
        
      </button>
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        
        
        <svg
          class="t-icon t-icon-cloud-upload"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M4.73 6.26l-.71.09A2.32 2.32 0 002 8.67c0 1.2.89 2.18 2 2.31v1a3.31 3.31 0 01-3-3.31 3.32 3.32 0 012.9-3.32A4.2 4.2 0 018 2c2 0 3.69 1.43 4.1 3.35 1.63.2 2.9 1.6 2.9 3.32a3.31 3.31 0 01-3 3.32v-1c1.11-.14 2-1.11 2-2.32 0-1.22-.9-2.2-2.02-2.32l-.71-.09-.15-.7A3.2 3.2 0 008 3a3.2 3.2 0 00-3.12 2.56l-.15.7z"
            fill="currentColor"
            fillOpacity="0.9"
          />
          <path
            d="M6.14 10.72L7.5 9.39l.03 5.12 1.01-.01-.03-5.1 1.37 1.34.72-.7-2.26-2.2a.5.5 0 00-.7 0l-2.22 2.18.72.7z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
        
        <span
          class="t-button__text"
        >
          
           上传文件 
          
        </span>
        
      </button>
    </div>
    <div
      class="demo-button-col"
    >
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary t-button--icon-only t-button--shape-circle"
        type="button"
      >
        
        
        <svg
          class="t-icon t-icon-discount t-size-m"
        >
          <use
            href="#t-icon-discount"
          />
        </svg>
        
        
        
      </button>
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary t-button--icon-only t-button--shape-circle"
        type="button"
      >
        
        
        <svg
          class="t-icon t-icon-cloud-download"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M4.73 6.26l-.71.09A2.32 2.32 0 002 8.67c0 1.2.89 2.18 2 2.31v1a3.31 3.31 0 01-3-3.31 3.32 3.32 0 012.9-3.32A4.2 4.2 0 018 2c2 0 3.69 1.43 4.1 3.35 1.63.2 2.9 1.6 2.9 3.32a3.31 3.31 0 01-3 3.32v-1c1.11-.14 2-1.11 2-2.32 0-1.22-.9-2.2-2.02-2.32l-.71-.09-.15-.7A3.2 3.2 0 008 3a3.2 3.2 0 00-3.12 2.56l-.15.7z"
            fill="currentColor"
            fillOpacity="0.9"
          />
          <path
            d="M9.8 11.3l-1.3 1.29v-4.6h-1v4.6L6.2 11.3l-.7.7 2.15 2.15c.2.2.51.2.7 0L10.5 12l-.7-.71z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
        
        
        
      </button>
    </div>
    <!-- 使用 function 的形式定义 icon -->
    <div
      class="demo-button-col"
    >
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        
        <svg
          class="t-icon t-icon-search"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M9.51 10.22a4.76 4.76 0 11.7-.7l3.54 3.52-.7.71-3.54-3.53zm.77-3.7a3.76 3.76 0 10-7.53 0 3.76 3.76 0 007.53 0z"
            fill="currentColor"
            fillOpacity="0.9"
          />
        </svg>
        <span
          class="t-button__text"
        >
          
           Function Icon 
          
        </span>
        
      </button>
    </div>
  </div>
</div>
`;

exports[`Button loading demo works fine 1`] = `
<div
  class="button-base"
>
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary t-is-disabled t-is-loading"
    type="button"
  >
    
    <div
      class="t-loading t-size-m t-loading-lock t-loading--inherit-color v-transfer-dom"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        size="medium"
        version="1.1"
        viewBox="0 0 14 14"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="1"
          y="1"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <!---->
    </div>
    <span
      class="t-button__text"
    >
      
       主按钮 
      
    </span>
    
  </button>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default t-is-disabled t-is-loading"
    type="button"
  >
    
    <div
      class="t-loading t-size-m t-loading-lock t-loading--inherit-color v-transfer-dom"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        size="medium"
        version="1.1"
        viewBox="0 0 14 14"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="1"
          y="1"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <!---->
    </div>
    <span
      class="t-button__text"
    >
      
       次按钮 
      
    </span>
    
  </button>
</div>
`;

exports[`Button size demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="item"
    >
      <button
        class="t-button t-size-s t-button--variant-base t-button--theme-primary"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           填充按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-s t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           描边按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-s t-button--variant-dashed t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           虚框按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-s t-button--variant-text t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           文字按钮 
          
        </span>
      </button>
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="item"
    >
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           填充按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-m t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           描边按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-m t-button--variant-dashed t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           虚框按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-m t-button--variant-text t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           文字按钮 
          
        </span>
      </button>
    </div>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <div
      class="item"
    >
      <button
        class="t-button t-size-l t-button--variant-base t-button--theme-primary"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           填充按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-l t-button--variant-outline t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           描边按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-l t-button--variant-dashed t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           虚框按钮 
          
        </span>
      </button>
    </div>
    <div
      class="item"
    >
      <button
        class="t-button t-size-l t-button--variant-text t-button--theme-default"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
           文字按钮 
          
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Button theme demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         填充按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         描边按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-dashed t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         虚框按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         文字按钮 
        
      </span>
    </button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         填充按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         描边按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-dashed t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         虚框按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         文字按钮 
        
      </span>
    </button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         填充按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         描边按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-dashed t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         虚框按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         文字按钮 
        
      </span>
    </button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         填充按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         描边按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-dashed t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         虚框按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         文字按钮 
        
      </span>
    </button>
  </div>
  <div
    class="tdesign-demo-block-row"
  >
    <button
      class="t-button t-size-m t-button--variant-base t-button--theme-success"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         填充按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-success"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         描边按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-dashed t-button--theme-success"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         虚框按钮 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-text t-button--theme-success"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         文字按钮 
        
      </span>
    </button>
  </div>
</div>
`;
